--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "coins",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": ["ios", "android", "web"],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -31,6 +31,6 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": ["**/*"],
-    "description": "A little app about finances"
+    "description": "a simple application that shows the current price, in reais, of the main currencies"
   }
 }
