--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "expo": "~37.0.12",
+    "intl": "^1.2.5",
     "react": "~16.9.0",
     "react-dom": "~16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
-    "styled-components": "^5.1.1",
-    "react-native-web": "~0.13.4"
+    "react-native-web": "~0.13.4",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
