--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "axios": "^0.19.2",
     "expo": "~37.0.12",
     "intl": "^1.2.5",
